plugins {
    id 'java'
}

group 'launchit'
version '0.2'

sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

jar {}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.1'
    compile group: 'com.google.guava', name: 'guava', version: 'r05'
    implementation 'org.greenrobot:eventbus:3.1.1'
    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
    implementation 'io.sentry:sentry:4.3.0'
}
